fix(deps): downgrade mockito to 4.11.0 for JDK8 compatibility